deploy/k8s/project/schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gola-schedule
  labels:
    repo: gola
    app: schedule
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: schedule
      version: v1
  template:
    metadata:
      labels:
        repo: gola
        app: schedule
        version: v1
    spec:
      containers:
        - name: gola-schedule
          image: registry:5000/gola/web:latest
          command:
            - ./gola
          args:
            - schedule
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
