deploy/k8s/project/server_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gola-server-v2
  labels:
    repo: gola
    app: gola-server
    version: v2
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: gola-server
      version: v2
  template:
    metadata:
      labels:
        repo: gola
        app: gola-server
        version: v2
      # annotations:
      #   telegraf.influxdata.com/port: "80"
      #   telegraf.influxdata.com/path: /metrics
      #   telegraf.influxdata.com/scheme: http
      #   telegraf.influxdata.com/interval: 5s
      #   telegraf.influxdata.com/class: basic
    spec:
      containers:
        - name: server
          image: registry:5000/gola/web:latest
          args:
            - "server"
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 80
          ports:
            - containerPort: 80
