deploy/k8s/project/gorpc_greet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorpc-greet-v1
  labels:
    repo: gola
    app: gorpc-greet
    version: v1
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: gorpc-greet
      version: v1
  template:
    metadata:
      labels:
        repo: gola
        app: gorpc-greet
        version: v1
      annotations:
        telegraf.influxdata.com/port: "80"
        telegraf.influxdata.com/path: /metrics
        telegraf.influxdata.com/scheme: http
        telegraf.influxdata.com/interval: 5s
        telegraf.influxdata.com/class: basic
        telegraf.influxdata.com/image: telegraf:1.16
    spec:
      containers:
        - name: server
          image: registry:5000/gola/web:latest
          command:
            - ./gola
          args:
            - gorpc
            - greet
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 50051

---
apiVersion: v1
kind: Service
metadata:
  name: gorpc-greet
  labels:
    repo: gola
    app: gorpc-greet
spec:
  selector:
    repo: gola
    app: gorpc-greet
  ports:
    - port: 50051
      targetPort: 50051
      name: tcp
