deploy/k8s/project/http_greet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-greet-v1
  labels:
    repo: gola
    app: http-greet
    version: v1
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: http-greet
      version: v1
  template:
    metadata:
      labels:
        repo: gola
        app: http-greet
        version: v1
    spec:
      containers:
        - name: server
          image: registry:5000/gola/web:v1
          command:
            - ./gola
          args:
            - server
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: http-greet
  labels:
    repo: gola
    app: http-greet
spec:
  selector:
    repo: gola
    app: http-greet
  ports:
    - port: 50051
      targetPort: 80
      name: http
