deploy/k8s/project/server_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gola-server-v1
  labels:
    repo: gola
    app: gola-server
    version: v1
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      repo: gola
      app: gola-server
      version: v1
  template:
    metadata:
      labels:
        repo: gola
        app: gola-server
        version: v1
    spec:
      containers:
        - name: server
          image: registry:5000/gola/web:latest
          args:
            - "server"
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 80
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gola-server
  labels:
    repo: gola
    app: gola-server
spec:
  type: ClusterIP
  selector:
    repo: gola
    app: gola-server
  ports:
    - port: 80
      targetPort: 80
      name: http
